--- a/public/assets/home/css/plugins/nav-menu.css
+++ b/public/assets/home/css/plugins/nav-menu.css
@@ -1108,6 +1108,9 @@ header {
     .header-style8.scrollHeader .navbar-nav > li > a {
         color: #232323
     }
+    .header-style8.scrollHeader .navbar-nav > li > a:active {
+        color: #8fe871
+    }
 
     .header-style8.scrollHeader .navbar-nav > li.has-sub > a:hover {
         color: #000
