--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1442,7 +1442,7 @@ select {
 }
 .bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: red;
 }
 .bg-red-100 {
   --tw-bg-opacity: 1;
@@ -1813,7 +1813,7 @@ select {
 }
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  background-color: #1f1f1f;
 }
 .hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
